<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding = "10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text = "@string/view_log"
            android:textColor="@color/colorPrimaryDark"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textSize="25dp" />

    <ListView
            android:id="@+id/oldLogList"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scrollbars="vertical">

        </ListView>

    <Button
        android:id="@+id/add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_add" />

    <Button
            android:id="@+id/clear"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_clear" />

</LinearLayout>