<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_fuel_track"
    android:padding = "10dp" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text = "@string/log_entry"
        android:textColor="@color/colorPrimaryDark"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:textSize="25dp" />


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Date: "
                    android:textSize="16dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

        <EditText android:id="@+id/edit_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/edit_date"
                        android:layout_below="@+id/textView"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
            android:layout_column="1" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Station:"
                android:textSize="16dp"
                android:id="@+id/textView7"
                android:layout_below="@+id/edit_date"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

        <EditText android:id="@+id/edit_station"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:hint="@string/edit_station"
                android:layout_below="@+id/textView7"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
            android:layout_column="1" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Odometer:"
                android:textSize="16dp"
                android:id="@+id/textView6"
                android:layout_below="@+id/edit_station"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

        <EditText android:id="@+id/edit_odometer"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:hint="@string/edit_odometer"
                android:layout_below="@+id/textView6"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
            android:layout_column="1" />
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="km"
                android:layout_below="@+id/edit_odometer"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
            android:layout_column="2" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Fuel Grade:"
                android:textSize="16dp"
                android:id="@+id/textView5"
                android:layout_below="@+id/edit_odometer"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

        <EditText android:id="@+id/edit_grade"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:hint="@string/edit_grade"
                android:layout_below="@+id/textView5"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
            android:layout_column="1" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Fuel Amount:"
                android:textSize="16dp"
                android:id="@+id/textView4"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

        <EditText android:id="@+id/edit_amount"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:hint="@string/edit_amount"
                android:layout_below="@+id/textView4"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
            android:layout_column="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="L"
            android:layout_below="@+id/edit_odometer"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_column="2"
            android:id="@+id/textView8" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Fuel Unit Cost: "
                android:textSize="16dp"
                android:id="@+id/textView3"
                android:layout_below="@+id/edit_amount"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

        <EditText android:id="@+id/edit_unit"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:hint="@string/edit_unit"
                android:layout_below="@+id/textView3"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
            android:layout_column="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="¢/L"
            android:layout_below="@+id/edit_odometer"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_column="2"
            android:id="@+id/textView9" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="     "
            android:layout_below="@+id/edit_odometer"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_column="3"
            android:id="@+id/textView10" />

    </TableRow>

    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_save"
        android:layout_span="5" />

    <Button
        android:id="@+id/log"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_log"
        android:layout_column="0"
        android:layout_span="5" />


</TableLayout>
